--- a/EduTune/MyCourse/MyCourse.storyboard
+++ b/EduTune/MyCourse/MyCourse.storyboard
@@ -91,7 +91,7 @@
                                 <rect key="frame" x="10" y="91" width="370" height="719"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ClassTVCell" id="ob1-U2-n6R" customClass="ClassTVCell" customModule="EduTune" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="DueAssignmentsTVCell" id="ob1-U2-n6R" customClass="DueAssignmentsTVCell" customModule="EduTune" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="55.333332061767578" width="370" height="176"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ob1-U2-n6R" id="NA7-jT-Btl">
